name: reflex-fltk
version: 0.0.0
synopsis: FLTKHS demos. Please scroll to the bottom for more information.
description:
  FLTKHS demos moved to a separate package to keep the core package free of additional dependencies.
license: MIT
license-file: LICENSE
author: Sam Boosalis, Aditya Siram
maintainer: samboosalis@gmail.com
homepage: http://github.com/sboosali/reflex-fltk
-- bug-reports:
-- copyright:
category: UI,Graphics
build-type: Simple
-- Custom
cabal-version: >=1.20

----------------------------------------

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

data-files:
  data/*.json
  scripts/*.sh

----------------------------------------

source-repository head
  type: git
  location: http://github.com/sboosali/reflex-fltk

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: True

----------------------------------------

library
  Hs-Source-Dirs: sources
  Include-Dirs: c-sources

  Exposed-Modules:
    Reflex.FLTK
    Reflex.FLTK.Types

    Reflex.FLTK.Bindings.Button

    Reflex.FLTK.Widgets.Button

  Other-Modules:
    Reflex.FLTK.Extra

  Build-Depends:

--    spiros >= 0.2,

    bytestring,
    text,
    containers, 

    mtl,

    dependent-sum, 
    ref-tf,

    fltkhs >= 0.5.4,
     
    reflex-basic-host >= 0.1.0,

    reflex-host >= 0.3,

    base == 4.*

  default-language: Haskell2010
  ghc-options: -Wall

----------------------------------------

Executable fltkhs-browser
  Main-Is: browser.hs
  Hs-Source-Dirs: sources
  Include-Dirs: c-sources
  Build-Depends:
     base == 4.*,
     fltkhs >= 0.5.4.1,
     bytestring,
     text >= 0.2 && < 1.3

  default-language: Haskell2010
  ghc-Options: -Wall -threaded
  if impl(ghc >= 7.10) && impl(ghc < 8.0) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0

  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"


----------------------------------------


Executable fltkhs-reflex-host
  Main-Is: reflex-host.hs
  Hs-Source-Dirs: sources/
  Build-Depends: base == 4.*,
                 fltkhs >= 0.5.3.4,
                 text >= 1.2.2.0,
                 reflex >= 0.4.0,
                 mtl >= 2.2.1,
                 transformers >= 0.4.2,
                 dependent-sum >= 0.3.2,
                 ref-tf >= 0.4

  default-language: Haskell2010
  ghc-Options: -Wall
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -fno-specialise -fmax-simplifier-iterations=0 -fsimplifier-phases=0
  else
     ghc-Options: -O2

  if os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"

  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"


----------------------------------------
